fix z-index problem

--- a/stylesheets/page-style.css
+++ b/stylesheets/page-style.css
@@ -117,9 +117,9 @@ height:60px;
 /* ====== navigation bar ====== */
 #home-nav > ul {
 position: fixed;
+z-index: 9999;
 top: 0;
 left: 0;
-z-index: 1;
 list-style-type: none;
 background-color: #14b814;
 display: block;
